fixed overlaping of BGimage

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     font-family: 'Macondo', cursive;
     background: #222;
-    background-image: url('https://source.unsplash.com/random/?city');
+    background-image: url('https://source.unsplash.com/random/1600×900?city');
     font-size: 120%;
 }
 
